Closed Bug 1411249 Opened 7 years ago Closed 7 years ago

Missing background behind text on specific page

Categories

(Core :: Graphics: WebRender, defect, P1)

Other Branch
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox57 --- unaffected
firefox58 --- unaffected

People

(Reporter: kats, Assigned: kats)

References

()

Details

(Whiteboard: [wr-mvp] [gfx-noted])

Attachments

(2 files, 1 obsolete file)

On http://everlastwindowsanddoors.ca/contact-us/ just below the "Contact us" banner there is a bunch of text and the contact form. Without WR this area has a whitish background but with WR enabled the whitish background is not there and instead the page's fixed background image is visible, making the text hard to read.
Whiteboard: [gfx-noted][wr-mvp][triage] → [gfx-noted][wr-mvp][triage][wr-reserve-candidate]
Whiteboard: [gfx-noted][wr-mvp][triage][wr-reserve-candidate] → [wr-reserve] [gfx-noted]
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Priority: P3 → P1
Attached file testcase (obsolete) —
I reduced this page to just a scrolled clip (using the "clip" property) on a fixed element. This testcase looks very similar to a reftest I remember writing before. So are scrolled clips on fixed elements just not working with WebRender at the moment?
Assignee: mstange → nobody
Status: ASSIGNED → NEW
Priority: P1 → P2
Priority: P2 → P3
Attached file testcase v2
I updated the reduced testcase to add a "transform: translateZ(0px)" on the fixed-pos item, which is present in the original page. This affects the display list because it introduces an extra nsDisplayTransform wrapper that sits inside the FixedPosition but outside the Background. I had a patch that fixed the first version of the reduced testcase but failed because of the extra nsDisplayTransform, so this test case is more representative of the real page.
Attachment #8921570 - Attachment is obsolete: true
Blocks: 1408792
See Also: 1408792
Taking this even though it's a P3 [wr-reserve] because I ended up fixing it as part of my investigation into bug 1408792.
Assignee: nobody → bugmail
Status: NEW → ASSIGNED
Priority: P3 → P1
Whiteboard: [wr-reserve] [gfx-noted] → [wr-mvp] [gfx-noted]
Attachment #8922865 - Flags: review?(mstange) → review+
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aa6f720f86f0 Handle yet more clipping cases. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Blocks: 1409564
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: